[gd_scene load_steps=5 format=3 uid="uid://dunhvufcfosw8"]

[ext_resource type="Script" path="res://modules/select_character/select_character.gd" id="1_ir1ps"]
[ext_resource type="PackedScene" uid="uid://d1j01lpi8ckyq" path="res://modules/player/player.tscn" id="1_nsh1n"]
[ext_resource type="PackedScene" uid="uid://bgkw7yh376j78" path="res://modules/select_character_area/select_character_area.tscn" id="2_c64u0"]
[ext_resource type="LabelSettings" uid="uid://cn1sxou71yp4n" path="res://themes/title.tres" id="2_g4q4l"]

[node name="SelectCharacter" type="ColorRect"]
offset_right = 240.0
offset_bottom = 160.0
mouse_filter = 2
color = Color(0.0313726, 0.172549, 0.313726, 1)
script = ExtResource("1_ir1ps")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -53.0
offset_top = 9.0
offset_right = 53.0
offset_bottom = 32.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 15
text = "Seleccionar personaje"
label_settings = ExtResource("2_g4q4l")

[node name="CharactersContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = -3.0
offset_top = 57.0
offset_right = 236.0
offset_bottom = 97.0

[node name="Player_1" parent="CharactersContainer" instance=ExtResource("1_nsh1n")]
position = Vector2(36, 15)
active = false

[node name="SelectCharacterArea" parent="CharactersContainer/Player_1" instance=ExtResource("2_c64u0")]

[node name="Player_2" parent="CharactersContainer" instance=ExtResource("1_nsh1n")]
position = Vector2(95, 15)
active = false
variation = 2

[node name="SelectCharacterArea" parent="CharactersContainer/Player_2" instance=ExtResource("2_c64u0")]

[node name="Player_3" parent="CharactersContainer" instance=ExtResource("1_nsh1n")]
position = Vector2(159, 15)
active = false
variation = 3

[node name="SelectCharacterArea" parent="CharactersContainer/Player_3" instance=ExtResource("2_c64u0")]

[node name="Player_4" parent="CharactersContainer" instance=ExtResource("1_nsh1n")]
position = Vector2(217, 15)
active = false
variation = 4

[node name="SelectCharacterArea" parent="CharactersContainer/Player_4" instance=ExtResource("2_c64u0")]

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -29.0
offset_top = -48.0
offset_right = 29.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "Aceptar"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
